get the first 24 stories, click on it, get information

--- a/storytower/src/App.css
+++ b/storytower/src/App.css
@@ -1,38 +1,71 @@
-.App {
-  text-align: center;
+.container {
+  flex: 1;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.contentContainer {
+  display: flex;
+  flex-wrap: wrap; /* Allow items to wrap into multiple rows */
+  justify-content: space-around; /* Align items with some space in between */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 16px;
+  padding: 16px;
+  background-color: white;
+  justify-content: space-between;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.item {
+  background-color: #a1a1a1;
+  padding: 10px;
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.item img {
+  width: 100%;
+  height: auto;
+}
+
+.itemText {
+  color: #fff;
+}
+
+
+.coverArt {
+  height: auto; /* Adjust height of coverArt */
+}
+
+.paginationContainer {
+  flex-direction: row;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  margin-top: 16px;
+}
+
+.activePaginationButton {
+  background-color: gray;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+}
+
+.activePaginationButtonText {
   color: white;
+  font-weight: bold;
 }
 
-.App-link {
-  color: #61dafb;
+.paginationButton {
+  padding: 8px 16px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.paginationButtonText {
+  font-size: 16px;
+}
+
+.ellipsis {
+  align-self: flex-end;
 }
