CSS IS SO HARD WHY?!

--- a/storytower/src/App.css
+++ b/storytower/src/App.css
@@ -3,6 +3,9 @@
   flex-wrap: wrap; /* Allow items to wrap into multiple rows */
   justify-content: space-around; /* Align items with some space in between */
 }
+.container {
+  flex: auto;
+}
 
 .grid-container {
   display: grid;
